Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.mm
@@ -152,6 +152,16 @@ UIScrollView *findActingScrollParent(UIScrollView *scrollView, const RemoteLayer
     return nil;
 }
 
+static Class scrollViewScrollIndicatorClass()
+{
+    static dispatch_once_t onceToken;
+    static Class scrollIndicatorClass;
+    dispatch_once(&onceToken, ^{
+        scrollIndicatorClass = NSClassFromString(@"_UIScrollViewScrollIndicator");
+    });
+    return scrollIndicatorClass;
+}
+
 }
 
 @interface UIView (WKHitTesting)
@@ -177,6 +187,13 @@ UIScrollView *findActingScrollParent(UIScrollView *scrollView, const RemoteLayer
         if ([view isKindOfClass:[WKChildScrollView class]]) {
             if (WebKit::isScrolledBy((WKChildScrollView *)view, viewsAtPoint.last())) {
                 LOG_WITH_STREAM(UIHitTesting, stream << " " << (void*)view << " is child scroll view and scrolled by " << (void*)viewsAtPoint.last());
+                return view;
+            }
+        }
+
+        if ([view isKindOfClass:WebKit::scrollViewScrollIndicatorClass()] && [view.superview isKindOfClass:WKChildScrollView.class]) {
+            if (WebKit::isScrolledBy((WKChildScrollView *)view.superview, viewsAtPoint.last())) {
+                LOG_WITH_STREAM(UIHitTesting, stream << " " << (void*)view << " is the scroll indicator of child scroll view, which is scrolled by " << (void*)viewsAtPoint.last());
                 return view;
             }
         }
